# evorl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  xuanwu.yaml
configs/: a2c.yaml  config.yaml  dqn.yaml  logging.yaml
configs/agent/: a2c.yaml  cemrl.yaml  ddpg.yaml  dqn.yaml  ec-mo.yaml  ec-so.yaml  ec.yaml  impala.yaml  paramppo.yaml  pbt-ngpu.yaml  pbt-paramppo.yaml  pbt-ppo.yaml  pbt.yaml  pbt_sac.yaml  ppo.yaml  ppo_record.yaml  sac.yaml  td3.yaml
configs/agent/contrib/: ars_linear.yaml  cemrl-nocem.yaml  cemrl-ori.yaml  cmaes-evox.yaml  cso-evox.yaml  erl-ori.yaml  nsga2-evox.yaml  openes-evox.yaml  pop-td3.yaml  pop_td3.yaml  rvea-evox.yaml  td3-ep.yaml  td3-onpolicy.yaml  td3-v2.yaml  td3-v3.yaml  td3_LN.yaml  td3_ln.yaml
configs/agent/ec/: ars.yaml  cmaes.yaml  cso.yaml  nsga2-brax.yaml  nsga2.yaml  openes-evox.yaml  openes.yaml  rvea.yaml  sepcem.yaml  sepcmaes.yaml
configs/agent/erl/: cemrl-openes.yaml  cemrl-ori.yaml  cemrl.yaml  erl-ga.yaml  erl-openes.yaml  erl-ori.yaml  erl-ves.yaml
configs/agent/meta/: paramppo.yaml  paramsac.yaml  (+5 more)
configs/env/: brax.yaml
docs/: autodoc2_docstrings_parser.py  build.sh  conf.py  index.md
docs/_static/: train_demo.py  workflow_api.py
docs/dev/: contributing.md
docs/guide/: installation.md  key-concepts.md  quickstart.md
docs/tutorial/: algorithms.md
evorl/: agent.py  distribution.py  evaluator.py  metrics.py  multi_agent_rollout.py  rollout.py  rollout_ma.py  sample_batch.py  test_load.py  train.py  train_dist.py  train_ec.py  types.py
evorl/agents/: __init__.py  a2c.py  a2c_v2.py  agent.py  ddpg copy.py  ddpg.py  dqn.py  ec.py  impala.py  ppo.py  random.py  random_agent.py  sac.py  td3.py
evorl/algorithms/: a2c.py  a2c_v2.py  agent.py  ddpg.py  dqn.py  impala.py  offpolicy_utils.py  ppo.py  ppo_record.py  random_agent.py  sac.py  td3.py
evorl/distributed/: __init__.py  comm.py  gradients.py  sharding.py
evorl/ec/: __init__.py  ec_train.py  meta_problem.py  mo_train.py  multi_obj_problem.py  so_train.py
evorl/envs/: __init__.py  brax.py  env.py  envpool.py  gymnasium.py  gymnax.py  jaxmarl.py  jumanji.py  mujoco_playground.py  multi_agent_env.py  space.py  utils.py
evorl/evaluators/: __init__.py  ec_evaluator.py  episode_collector.py  evaluator.py  mo_brax_evaluator.py
evorl/networks/: __init__.py  layer_norm.py  linear.py  spectral_norm.py
evorl/recorders/: __init__.py  json_recorder.py  log_recorder.py  recorder.py  wandb_recorder.py
evorl/replay_buffers/: __init__.py  replay_buffer.py
evorl/utils/: cfg_utils.py  distribution.py  ec_utils.py  flashbax_utils.py  hydra_utils.py  jax_utils.py  ma_utils.py  orbax_utils.py  rl_toolkits.py  running_statistics.py  toolkits.py
evorl/workflows/: __init__.py  ea_wf.py  ea_workflow.py  ec_workflow.py  evox_workflow.py  meta_ec_workflow.py  offpolicy_wf.py  onpolicy_wf.py  rl_workflow.py  workflow.py  workflow_old.py
requirements/: requirements-conda.txt  requirements-contrib.txt  requirements-dev.txt  requirements.txt  xuanwu.yaml
scripts/: train.py  train_100_iteration.py  train_dist.py  visualize_mjx.ipynb
tests/: conftest.py  test_a2c.py  test_brax_env.py  test_distribution.py  test_ea_workflow.py  test_ec_operator.py  test_ec_utils.py  test_ec_workflow.py  test_env.py  test_env_wrapper.py  test_evaluator.py  test_gae.py  test_impala.py  test_rollout.py  test_toolkits.py  utils.py
(+304 files in other folders)
